--- a/front/src/assets/style/angular-material-custom.scss
+++ b/front/src/assets/style/angular-material-custom.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/@angular/material/core/theming/all-theme';
+@import "typography";
 // Plus imports for other components in your app.
 
 // Include the base styles for Angular Material core. We include this here so that you only
@@ -45,6 +46,10 @@ md-input-container.ng-dirty.ng-invalid .mat-input-ripple {
 
 md-input-container.ng-dirty.ng-invalid md-hint {
   color: red;
+}
+
+md-card.mat-card {
+  font-family: $font-family-base !important;
 }
 
 /*# sourceMappingURL=signin.component.css.map */
