--- a/front/src/assets/style/bootstrap-custom.scss
+++ b/front/src/assets/style/bootstrap-custom.scss
@@ -1,4 +1,5 @@
 @import "material-bootstrap-colours-custom";
+@import "typography";
 
 // Navbar themes
 //
@@ -19,3 +20,8 @@
     background-color: transparent;
   }
 }
+
+body {
+  font-family: $font-family-base;
+}
+
