--- a/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
+++ b/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
@@ -5,7 +5,7 @@
                 <h4 class="text-light-weight">Editer mon profil</h4>
             </div>
         </div>
-        <form (ngSubmit)="confirm()" [formGroup]="memberForm">
+        <form (ngSubmit)="edit()" [formGroup]="memberForm">
             <div class="modal-body">
                 <md-tab-group>
                     <md-tab label="Informations">
