--- a/front/src/app/welcome/welcome.component.html
+++ b/front/src/app/welcome/welcome.component.html
@@ -4,8 +4,12 @@
         <p class="lead text-white subtitle">Votre assistant de fitness virtuel.</p>
 
         <div class="mt-4">
-            <button class="btn btn-primary btn-lg" routerLink="/connexion">Connexion</button>
-            <button class="btn btn-primary btn-lg" routerLink="/inscription">Inscription</button>
+            <button class="btn btn-primary btn-round btn-lg" routerLink="/connexion">
+                <i class="ion ion-log-in pr-3"></i>Connexion
+            </button>
+            <button class="btn btn-primary btn-round btn-lg" routerLink="/inscription">
+                <i class="ion ion-log-in pr-3"></i>Inscription
+            </button>
         </div>
     </div>
 </div>
