--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -177,6 +177,25 @@ body {
   }
 }
 
+.btn-round-lg {
+  border-radius: 22.5px;
+}
+
+.btn-round {
+  border-radius: 17px;
+  font-size: 14px;
+}
+
+.btn-round-sm {
+  border-radius: 15px;
+}
+
+.btn-round-xs {
+  border-radius: 11px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .landing-page {
   background: url('../../assets/img/background.jpg') no-repeat;
   background-size: 100%;
