--- a/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
+++ b/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
@@ -11,7 +11,7 @@
                     <md-tab label="Informations">
                         <div class="row pt-4">
                             <md-input-container class="col-md-12" color="primary" ngxErrors="email">
-                                <input id="inputMail" mdInput type="text"
+                                <input id="inputMail" mdInput type="email"
                                        placeholder="Votre Email"
                                        formControlName="email"
                                        required>
