--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-md-5">
+<div class="row mt-md-5" [@fadeIn]>
     <div class="col-md-12">
         <md-card class="p-0 blured">
             <div class="row">
