--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -80,6 +80,13 @@
                             <span class="pl-4">Accueil</span>
                         </a>
                     </li>
+                    <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']" [routerLink]="['adherents', authenticationProfile.id]"
+                        *ngIf="auth.authenticated() && profileService.profileIsCompleted()">
+                        <a>
+                            <i class="material-icons">supervisor_account</i>
+                            <span class="pl-4">Adhérents</span>
+                        </a>
+                    </li>
                     <li class="sidebar-link pt-2 pb-3" (click)="signout()" *ngIf="auth.authenticated()">
                         <a>
                             <i class="material-icons">power_settings_new</i>
