--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -28,8 +28,8 @@
             <pulpe-profile-photo></pulpe-profile-photo>
         </div>
     </div>
-    <div class="row bottom-right">
-        <div class="col-md-12 pt-2 pb-2">
+    <div class="row">
+        <div class="col-md-12 pt-2 pb-2 btnBottomRight">
             <button md-fab class="pull-right bg-primary" (click)="openDialogEditMember()">
                 <i class="ion-edit edit"></i>
             </button>
