--- a/front/src/app/members/members.component.scss
+++ b/front/src/app/members/members.component.scss
@@ -31,3 +31,13 @@ md-card {
 .pointer {
   cursor: pointer;
 }
+
+.maleIcon {
+  font-size: 1.9rem;
+  color: $accent-color;
+}
+
+.femaleIcon {
+  font-size: 1.9rem;
+  color: $primary-color;
+}
