--- a/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
+++ b/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.html
@@ -53,6 +53,15 @@
                                 </md-hint>
                             </md-input-container>
                         </div>
+                        <div class="row pt-2">
+                            <div class="col-md-12">
+                                <i class="ion-ios-person-outline iconGender"></i>
+                                <md-radio-group formControlName="gender" class="pl-3">
+                                    <md-radio-button value="Male">Homme</md-radio-button>
+                                    <md-radio-button class="pl-4" value="Female">Femme</md-radio-button>
+                                </md-radio-group>
+                            </div>
+                        </div>
                     </md-tab>
                     <md-tab label="Objectif">
                         <div class="row pt-4">
