List of machines

--- a/front/src/app/members/members.component.html
+++ b/front/src/app/members/members.component.html
@@ -69,7 +69,7 @@
                     </div>
                 </td>
                 <td>
-                    <div class="row iconsList">
+                    <div class="row iconsList pull-right">
                         <div class="col-md-6">
                             <button class="ion ion-clipboard pointer bg-primary" md-mini-fab
                                     mdTooltip="Consulter le programme de l'adhérent"
