--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -233,3 +233,9 @@ body {
 .pointer {
   cursor: pointer;
 }
+
+.modal-header {
+  background-color: $primary-color;
+  color: #FFFFFF;
+  display: inline;
+}
