--- a/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.scss
+++ b/front/src/app/profile/profile-member-edit-dialog/profile-member-edit-dialog.component.scss
@@ -1,15 +1,5 @@
 @import "../../../assets/style/colors";
 
-.modal {
-  background-color: $secondary-text !important;
-}
-
-.modal-header {
-  background-color: $primary-color;
-  color: #FFFFFF;
-  display: inline;
-}
-
 .choice {
   text-align: center;
   cursor: pointer;
@@ -56,4 +46,8 @@
 
 .iconGender {
   font-size: 1.9rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
