--- a/front/src/assets/style/_colors.scss
+++ b/front/src/assets/style/_colors.scss
@@ -9,3 +9,5 @@ $light-primary-color: #FFCCBC;
 $primary-text: #212121;
 $secondary-text: #757575;
 $divider-color: #BDBDBD;
+
+$input-error-color: red;
