--- a/front/src/assets/style/angular-material-custom.scss
+++ b/front/src/assets/style/angular-material-custom.scss
@@ -1,5 +1,8 @@
 @import '../../../node_modules/@angular/material/theming';
 @import "typography";
+/********************* FIX by MDS ***************/
+@import "colors"; //Use this color during the problem with $candy-app-primary is not resolved by angular material team
+/********************* FIX by MDS ***************/
 // Plus imports for other components in your app.
 
 // Include the base styles for Angular Material core. We include this here so that you only
@@ -23,29 +26,41 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // that you are using.
 @include angular-material-theme($candy-app-theme);
 
-.mat-input-underline {
-  position: initial;
-  height: 1px;
-  width: 100%;
-  margin-top: 4px;
-  border-top-width: 1px;
-  border-top-style: solid;
-}
-
 md-input-container.ng-dirty.ng-invalid .mat-input-placeholder {
-  color: red;
+  color: $input-error-color;
 }
 
 md-input-container.ng-dirty.ng-invalid .mat-input-underline {
-  border-color: red;
+  border-color: $input-error-color;
 }
 
 md-input-container.ng-dirty.ng-invalid .mat-input-ripple {
-  background-color: red;
+  background-color: $input-error-color;
 }
 
 md-input-container.ng-dirty.ng-invalid md-hint {
-  color: red;
+  color: $input-error-color;
+}
+
+input.mat-input-element:-webkit-autofill + .mat-input-placeholder .mat-placeholder-required, .mat-focused .mat-input-placeholder.mat-float .mat-placeholder-required {
+  color: $primary-color;
+}
+
+.mat-input-invalid .mat-input-placeholder {
+  &.mat-accent, &.mat-float .mat-placeholder-required {
+    color: $input-error-color;
+  }
+}
+
+.mat-radio-button.mat-accent {
+  &.mat-radio-checked {
+    .mat-radio-outer-circle {
+      border-color: $primary-color;
+    }
+  }
+  .mat-radio-inner-circle {
+    background-color: $primary-color;
+  }
 }
 
 md-card.mat-card {
